--- a/server/package.json
+++ b/server/package.json
@@ -18,10 +18,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.2.0",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@types/morgan": "^1.9.9"
   }
 }
