--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-oauth2-jwt-bearer": "^1.6.0",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.2.0",
     "morgan": "^1.10.0",
@@ -27,6 +30,7 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9"
   }
 }
