--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,9 @@
   "main": "./src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/index.ts",
-    "server": "nodemon ./src/index.ts"
+    "server": "nodemon ./src/index.ts",
+    "build": "npm install && npx tsc",
+    "start": "node ./dist/index.js"
   },
   "author": "ThanhDoan",
   "license": "ISC",
