Client - Form Manage Restaurant

--- a/client/.env
+++ b/client/.env
@@ -1,9 +1,9 @@
-# VITE_API_BASE_URL= "http://localhost:5000"
-VITE_API_BASE_URL= "https://server-food-ordering.onrender.com"
+VITE_API_BASE_URL= "http://localhost:5000"
+# VITE_API_BASE_URL= "https://server-food-ordering.onrender.com"
 
 VITE_AUTH0_DOMAIN= "dev-0x747ali0tjea67g.us.auth0.com"
 VITE_AUTH0_CLIENT_ID= "rlmMDcdkiuWycuc63ibXc7pLfhhgOrRy"
-# VITE_AUTH0_CALLBACK_URL= "http://localhost:5173"
-VITE_AUTH0_CALLBACK_URL= "https://client-food-ordering.vercel.app/"
+VITE_AUTH0_CALLBACK_URL= "http://localhost:5173"
+# VITE_AUTH0_CALLBACK_URL= "https://client-food-ordering.vercel.app/"
 VITE_AUTH0_AUDIENCE= "api-food-ordering"
 
