--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,9 @@
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "lucide-react": "^0.340.0",
     "next-themes": "^0.2.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-query": "^3.39.3",
@@ -42,6 +44,7 @@
   "devDependencies": {
     "@types/node": "^20.11.20",
     "@types/react": "^18.2.56",
+    "@types/react-csv": "^1.1.10",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
