--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "./src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon ./src/index.ts",
+    "server": "concurrently \"nodemon ./src/index.ts\" \"npm run stripe\"",
+    "stripe": "stripe listen --forward-to localhost:5000/api/order/checkout/webhooks",
     "build": "npm install && npx tsc",
     "start": "node ./dist/index.js"
   },
@@ -18,6 +19,7 @@
     "@types/node": "^20.11.20",
     "body-parser": "^1.20.2",
     "cloudinary": "^2.0.2",
+    "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
@@ -30,6 +32,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
+    "stripe": "^14.20.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
